Little bit refactoring.